--- a/.gitignore
+++ b/.gitignore
@@ -34,11 +34,11 @@ project.fragment.lock.json
 **/Migrations/*.Snapshot.cs
 
 # React / Node (WebUI)
-src/WebUI/node_modules/
-src/WebUI/dist/
-src/WebUI/dist-ssr/
-src/WebUI/.env.local
-src/WebUI/.env.*.local
+WebUI/node_modules/
+WebUI/dist/
+WebUI/dist-ssr/
+WebUI/.env.local
+WebUI/.env.*.local
 
 
 # OS files
