--- a/src/Application/Application.csproj
+++ b/src/Application/Application.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -17,8 +17,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Cards\Commands\AssignMember\" />
     <Folder Include="Cards\Queries\GetProjectCards\" />
     <Folder Include="Cards\Queries\GetAssignedCards\" />
+    <Folder Include="Projects\DTOs\ProjectMember\" />
   </ItemGroup>
 
 </Project>
