test(list): add unit tests for list handlers

--- a/tests/Application.Tests/Application.Tests.csproj
+++ b/tests/Application.Tests/Application.Tests.csproj
@@ -27,7 +27,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Folder Include="Boards\DTOs\" />
+	  <Folder Include="Cards\Queries\" />
 	</ItemGroup>
 
 </Project>
