--- a/src/WebApi/appsettings.json
+++ b/src/WebApi/appsettings.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-        "DefaultConnection": "Server=localhost,1433;Database=TrolloApp;User Id=sa;Password=Aehab123#;TrustServerCertificate=True;"
+        "DefaultConnection": "",
     },
     "Serilog": {
         "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
